--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blaze-api-app",
   "version": "1.0.0",
   "description": "Blaze engineering project API",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "author": "Marcelo Arias",
   "license": "MIT",
